syntax = "proto3";

package pb;

service CoordinateService {
  rpc getCoordinate (getCoordinateRequest) returns (getCoordinateResponse) {}
  rpc getCoordinatesByUser (getCoordinatesByUserRequest) returns (getCoordinatesByUserResponse) {}
  rpc postCoordinate (postCoordinateRequest) returns (postCoordinateResponse) {}
}

message Coordinate {
  int32 id = 1;
  int32 userId = 2;
  repeated int32 itemIds = 3;
}

message getCoordinateRequest {
  int32 id = 1;
}

message getCoordinateResponse {
  Coordinate coordinate = 1;
}

message getCoordinatesByUserRequest {
  int32 userId = 1;
}

message getCoordinatesByUserResponse {
  repeated Coordinate coordinates = 1;
}

message postCoordinateRequest {
  int32 userId = 1;
  repeated int32 itemIds = 2;
}

message postCoordinateResponse {
}
