syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service ItemService {
  rpc getItem (GetItemRequest) returns (GetItemResponse) {
    option (google.api.http) = {
      get: "/item/{id}"
    };
  }
  rpc getItems (GetItemsRequest) returns (GetItemsResponse) {}
  rpc postItem (PostItemRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/item"
      body: "*"
    };
  }
}

message Item {
  int32 id = 1;
  string name = 2;
  int32 price = 3;
}

message GetItemRequest {
  int32 id = 1;
}

message GetItemResponse {
  Item item = 1;
}

message GetItemsRequest {
  repeated int32 ids = 1;
}

message GetItemsResponse {
  repeated Item items = 1;
}

message PostItemRequest {
  string name = 1;
  int32 price = 2;
}
